--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,6 +18,8 @@
     "paths": {
       "@/*": ["./client/src/*"],
       "@shared/*": ["./shared/*"]
+    "resolveJsonModule": true,
+    "esModuleInterop": true,
     }
   }
 }
