--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,11 +15,11 @@
     "moduleResolution": "bundler",
     "baseUrl": ".",
     "types": ["node", "vite/client"],
+    "resolveJsonModule": true,   // ✅ Inside compilerOptions
+    "esModuleInterop": true,     // ✅ Inside compilerOptions
     "paths": {
       "@/*": ["./client/src/*"],
-      "@shared/*": ["./shared/*"],
-    "resolveJsonModule": true,
-    "esModuleInterop": true,
+      "@shared/*": ["./shared/*"]  // ✅ No trailing comma issue
     }
   }
 }
