--- a/package.json
+++ b/package.json
@@ -55,7 +55,8 @@
     "framer-motion": "^11.13.1",
     "input-otp": "^1.4.2",
     "lucide-react": "^0.453.0",
-    "mapbox-gl": "^3.18.1",
+    "mapbox-gl": "^3.1.2",
+    "@mapbox/mapbox-gl-geocoder": "^5.0.2"
     "memorystore": "^1.6.7",
     "next-themes": "^0.4.6",
     "passport": "^0.7.0",
